added category module and dto changes